--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body> 
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia nisi, voluptate maiores facilis voluptas doloribus aliquam ad iure quibusdam adipisci?</p>      
+    <a href="#" class="link-arrow">Learn More</a>
 </body>
 </html>
