--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/normalize.css">
 </head> 
 <body>
-    <button class="btn btn--primary btn--block ">Buy Now</button>
-    <a href="#" class="btn btn--primary btn--block">Buy Now</a>
+    <input type="text" class="input" placeholder="Enter domain name here ..." />
 </body>
 </html>
