--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/normalize.css">
 </head> 
 <body>
-    <input type="text" class="input" placeholder="Enter domain name here ..." />
+    <div class="input-group">
+        <button class="btn btn--accent">Search</button>
+        <input type="text" class="input" placeholder="Enter domain name here ..." />
+    </div>
 </body>
 </html>
