Build the Cards component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/normalize.css">
 </head> 
 <body>
-   
+    <div style="width: 30%; padding: 4rem">
+       
 </body>
 </html>
