--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head> 
-<body style="padding: 5rem;">
-  
+<body>
+    
        
 </body>
 </html>
